--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,21 +1,26 @@
 name: Go
 
 on:
+  # triggered when code is pushed to any branch
   push:
+  # triggered when there is a pr to master branch
   pull_request:
     branches: [ master ]
 
 jobs:
 
   build:
+    # this will select any self-hosted runner
     runs-on: self-hosted
     steps:
+    # This action checks-out the branch to the commit that triggered the job
     - uses: actions/checkout@v2
-
     - name: Set up Go
+      # This is actually a git ref/SHA/Docker-tag-number. Not specifying version (i.e. @v2 part) is dangerous.
       uses: actions/setup-go@v2
       with:
-        go-version: 1.14
+        go-version: 1.17
 
     - name: Build
-      run: go build -v main.go
+      # run: go build -v main.go
+      run: echo 'sleeping for 10 seconds' && sleep 10 && echo 'waking up and finishing...'
