--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,4 +23,7 @@ jobs:
 
     - name: Build
       # run: go build -v main.go
-      run: echo 'sleeping for 10 seconds' && sleep 10 && echo 'waking up and finishing...'
+      run: |
+        echo 'sleeping for 10 seconds'
+        sleep 10
+        echo 'waking up and finishing...'
